[metadata]
name = asteria
version = 0.0.1
url = https://github.com/isidentical/asteria
author = isidentical
description = Missing AST features
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = asteria
python_requires = >=3.7

[options.entry_points]
console_scripts =
    asteria = asteria:main

[bdist_wheel]
universal = True
