[metadata]
name = asteria
version = 0.0.2
url = https://github.com/isidentical/asteria
author = isidentical
description = Missing AST features
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9

[options.package_data]
asteria =
    asdl.txt

[options.entry_points]
console_scripts =
    asteria = asteria.asteria:main

[bdist_wheel]
universal = True
